--- a/css/timeline.css
+++ b/css/timeline.css
@@ -9,12 +9,13 @@
     display: flex;
     position: relative;
     transition: transform 0.5s ease;
+    --pseudo-position: absolute;
     
   }
   
   .timeline::before {
     content: '';
-    position: absolute;
+    position: var(--pseudo-position);
     left: 0;
     right: 0;
     top: 50%;
@@ -36,7 +37,7 @@
   
   .timeline-item::after {
     content: '';
-    position: absolute;
+    position: var(--pseudo-position);
     top: 50%;
     left: 50%;
     width: 20px;
