--- a/css/programcards.css
+++ b/css/programcards.css
@@ -2,19 +2,36 @@
     margin: 0 auto;
     width: 90%;
     justify-content: center;
+    padding: 20px 0;
+    overflow-x: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
+
+/* 隱藏滾動條但保留功能 */
+.container-program::-webkit-scrollbar {
+    display: none;
+}
   
   .cards-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
   }
+
+  .card-list {
+    display: flex;
+    padding: 10px;
+    gap: 15px;
+    width: max-content;
+}
   .card {
     background: white;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     width: 250px;
+    cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
   .card:hover {
@@ -169,6 +186,9 @@
   display: flex;
   flex-direction: colums;
   align-items: center;
+ }
+ .program{
+  padding-top:0px;
  }
    
     
